samples/_failures_safe/1761154358_4188bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5fa352f.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_e5fa352f.c:196:5: error: expected declaration or statement at end of input
  196 |     }
      |     ^
